--- a/src/assets/styles/_profile.scss
+++ b/src/assets/styles/_profile.scss
@@ -48,9 +48,9 @@
 
 
 .profile {
+	grid-row: profile;
 	overflow: hidden;
 	box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.3);
-	flex-basis: auto;
 	width: 100%;
 	height: 0;
 	transition: height $animation-speed;
